Collapsed sections now have a CSS class of .collapsed instead of .open - This Resolves #35 (twitter boostrap naming conflict) and Resolves #48 (avoid CSS syle clashes)

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -60,8 +60,8 @@ h3 a {
   text-shadow: 1px 1px 1px rgb(128,10,85);
 }
 h3:hover { background: rgb(228,10,85); }
-h3.open  { background: rgb(255,70,120); }
-h3.open a { background-position: 13px -25px; }
+h3.collapsed  { background: rgb(255,70,120); }
+h3.collapsed a { background-position: 13px -25px; }
 h3 + div { padding: 10px; }
 
 h2 + div,
@@ -90,16 +90,16 @@ h3+div {
   display: block!important;
   -webkit-transform: translateZ(0);
   -webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	-o-transition: all 0.3s ease;
-	-ms-transition:all 0.3s ease;
-	transition: all 0.3s ease;
+  moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition:all 0.3s ease;
+  transition: all 0.3s ease;
 }
 #css3-animated-example .content {
   padding: 10px;
 }
 
-#css3-animated-example h3.open + div {
+#css3-animated-example h3.collapsed + div {
   height: auto;
   background: #aaffff;
 }
